package chanceCards;

public abstract class ChanceCard {
    protected String name;
}
